[tool.poetry]
name = "rymbootstrap"
version = "0.1.0"
description = ""
authors = ["harmitage <anthonyharmitage@pm.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyterlab = "^4.0.0"
rymscraper = { path = "./rymscraper/", develop = false }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
